parser/tests/bad/ref01-2.st
% identifier 'x' is not declared
%   array subscript reference

var i := arr[1]
